# python-base-test-4

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.bak.md  CHANGELOG.md  CONTRIBUTING  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: changelog-labels.yaml  release-drafter-config.yaml
.github/workflows/: labeler.yaml  pytest-on-push.yaml  release-drafter.yaml
dev-docs/: changelog.template.rst
docs/source/: conf.py  contributing.md  dev-setup.md  index.md  license.md  python_base_test_4_cli.rst  usage.md
src/python_base_test_4/: __init__.py  python_base_test_4_cli.py
src/python_base_test_4/snippets/: __init__.py
tests/python_base_test_4/: __init__.py  test_console.py
